--- a/app/views/bugs/_form.html.erb
+++ b/app/views/bugs/_form.html.erb
@@ -34,6 +34,13 @@
   </div>
 
   <div class="field">
+    <%= form.label :user_id %>
+    <%= form.select :user_id,
+    options_for_select(User.all.collect {|a| ["#{a.lname},#{a.fname}", a.id]},
+    selected: (@bug.user ? @bug.user.id : User.first.id)), {} %>
+  </div>
+
+  <div class="field">
     <%= form.label :status %>
     <!--<%= form.text_field :status, id: :bug_status %>-->
     <%= form.select :status, Bug.statuses.keys, selected: @bug.status %>
