--- a/app/views/bugs/show.html.erb
+++ b/app/views/bugs/show.html.erb
@@ -25,5 +25,11 @@
   <%= @bug.status %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= (@bug.user.try(:fname) || "NA") %>
+  <%= (@bug.user.try(:lname) || "NA") %>
+</p>
+
 <%= link_to 'Edit', edit_bug_path(@bug) %> |
 <%= link_to 'Back', bugs_path %>
