--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -10,6 +10,7 @@
       <th>Issue type</th>
       <th>Priority</th>
       <th>Status</th>
+      <th>User</th>      
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= bug.issue_type %></td>
         <td><%= bug.priority %></td>
         <td><%= bug.status %></td>
+        <td><%= (bug.user.try(:fname)) || "NA" %> <%= (bug.user.try(:lname)) || "NA" %></td>
         <td><%= link_to 'Show', bug %></td>
         <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
         <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
