--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,27 +11,31 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :lname %>
-    <%= form.text_field :lname, id: :user_lname %>
+  <div class="form-group">
+    <%= form.label :lname , "Last Name"%>
+    <%= form.text_field :lname, id: :user_lname, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :fname %>
-    <%= form.text_field :fname, id: :user_fname %>
+  <div class="form-group">
+    <%= form.label :fname , "First Name"%>
+    <%= form.text_field :fname, id: :user_fname, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :user_email %>
+  <div class="form-group">
+    <%= form.label :email , "Email"%>
+    <%= form.text_field :email, id: :user_email, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :thumbnail %>
-    <%= form.text_field :thumbnail, id: :user_thumbnail %>
+  <div class="form-group">
+    <%= form.label :thumbnail, "Thumbnail" %>
+    <%= form.file_field :thumbnail, id: :user_thumbnail, class: "form-control-file" %>
   </div>
+
+
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary" %>
+    <%= link_to 'Cancel', users_path, class: "btn btn-danger" %>
   </div>
+
 <% end %>
