--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,4 +1,10 @@
 body {
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
+
+/*
+body {
   background-color: #fff;
   color: #333;
   margin: 33px;
@@ -82,3 +88,4 @@ div {
 label {
   display: block;
 }
+*/
