--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -2,15 +2,15 @@
 
 <h1>Bugs</h1>
 
-<table>
+<table class="table table-hover table-dark">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Issue type</th>
-      <th>Priority</th>
-      <th>Status</th>
-      <th>User</th>      
+      <th class="col-md-3">Title</th>
+      <th class="col-md-3">Description</th>
+      <th class="col-md-3">Issue type</th>
+      <th class="col-md-3">Priority</th>
+      <th class="col-md-3">Status</th>
+      <th class="col-md-3">User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,15 +18,27 @@
   <tbody>
     <% @bugs.each do |bug| %>
       <tr>
-        <td><%= bug.title %></td>
-        <td><%= bug.description %></td>
-        <td><%= bug.issue_type %></td>
-        <td><%= bug.priority %></td>
-        <td><%= bug.status %></td>
-        <td><%= (bug.user.try(:fname)) || "NA" %> <%= (bug.user.try(:lname)) || "NA" %></td>
-        <td><%= link_to 'Show', bug %></td>
-        <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
-        <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="col-md-3"><%= bug.title %></td>
+        <td class="col-md-3"><%= bug.description %></td>
+        <td class="col-md-3"><%= bug.issue_type %></td>
+        <td class="col-md-3"><%= bug.priority %></td>
+        <td class="col-md-3"><%= bug.status %></td>
+        <td class="col-md-3"><%= (bug.user.try(:fname)) || "NA" %> <%= (bug.user.try(:lname)) || "NA" %></td>
+
+        <td class="col-md-3">
+          <%= link_to bug, class: "btn btn-success btn-sm" do %>
+          <i></i> Show
+          <% end %>
+
+          <%= link_to edit_bug_path(bug), class: "btn btn-default btn-sm" do %>
+          <i></i> Edit
+          <% end %>
+
+          <%= link_to bug, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" do %>
+          <i></i> Delete
+          <% end %>
+
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +46,4 @@
 
 <br>
 
-<%= link_to 'New Bug', new_bug_path %>
+<%= link_to 'New Bug', new_bug_path, :class => "btn btn-primary" %>
