--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Users</h1>
 
-<table>
+<table class="table table-hover table-dark">
   <thead>
     <tr>
-      <th>Lname</th>
-      <th>Fname</th>
-      <th>Email</th>
-      <th>Thumbnail</th>
+      <th class="col-md-3">Lname</th>
+      <th class="col-md-3">Fname</th>
+      <th class="col-md-3">Email</th>
+      <th class="col-md-3">Thumbnail</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,13 +16,25 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.lname %></td>
-        <td><%= user.fname %></td>
-        <td><%= user.email %></td>
-        <td><%= user.thumbnail %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="col-md-3"><%= user.lname %></td>
+        <td class="col-md-3"><%= user.fname %></td>
+        <td class="col-md-3"><%= user.email %></td>
+        <td class="col-md-3"><%= user.thumbnail %></td>
+
+        <td class="col-md-3">
+          <%= link_to user, class: "btn btn-success btn-sm" do %>
+          <i></i> Show
+          <% end %>
+
+          <%= link_to edit_user_path(user), class: "btn btn-default btn-sm" do %>
+          <i></i> Edit
+          <% end %>
+
+          <%= link_to user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" do %>
+          <i></i> Delete
+          <% end %>
+        </td>
+
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, :class => "btn btn-primary" %>
